added html elements

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Titlesasad</title>
+    <title>PWP Milestone 1</title>
 </head>
 <body>
+<h1>PWP Milestone 1</h1>
+<h2>Purpose, Audience & Goal</h2>
+<h3>Purpose</h3>
+<ul class="center">
 
+</ul>
 </body>
 </html>
