added html elements

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -9,6 +9,7 @@
 <h2>Purpose, Audience & Goal</h2>
 <h3>Purpose</h3>
 <ul class="center">
+    <li>The website of this project is a personal portfolio of my professional web development experience</li>
 
 </ul>
 </body>
