added html style

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>PWP Milestone 1</title>
 </head>
-<body>
+<body style="text-align:center">
 <h1>PWP Milestone 1</h1>
 <h2>Purpose, Audience & Goal</h2>
 <h3>Purpose</h3>
-<ul class="center">
+<ul>
     <li>The website of this project is a personal portfolio of my professional web development experience.</li>
 </ul>
 
