--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -5,18 +5,21 @@
     <title>PWP Milestone 1</title>
 </head>
 <body style="text-align:center">
-<h1>PWP Milestone 1</h1>
-<h2>Purpose, Audience & Goal</h2>
-<h3>Purpose</h3>
-<ul>
+     <h1>PWP Milestone 1</h1>
+     <h2>Purpose, Audience & Goal</h2>
+     <h3>Purpose</h3>
+
+<ul style="text-align:center" class="center">
     <li>The website of this project is a personal portfolio of my professional web development experience.</li>
 </ul>
 
-<h3>Audience</h3>
-<ul class="center">
+    <h3>Audience</h3>
+
+<ul class="right">
     <li>the audience category this website targeting is future employers including: HR managers, recruiters.</li>
 </ul>
-<h3>Goal</h3>
+
+    <h3>Goal</h3>
 <ul>
     <li>The main goal of this website is for users to get in con contact with me regarding employment offers. And the the other goal is to show my previous work achievements and progress</li>
 
