--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>PWP Milestone 1</title>
 </head>
-<body style="text-align:center">
+<body style="text-align:left">
      <h1>PWP Milestone 1</h1>
      <h2>Purpose, Audience & Goal</h2>
      <h3>Purpose</h3>
