added html style

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -10,7 +10,7 @@
      <h3>Purpose</h3>
 
 <ul style="text-align:center" class="center">
-    <li>The website of this project is a personal portfolio of my professional web development experience.</li>
+    <p>The website of this project is a personal portfolio of my professional web development experience.</p>
 </ul>
 
     <h3>Audience</h3>
