added html style

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -22,7 +22,7 @@
 
         <dt>Goal</dt>
         <dd>
-            <p>The main goal of this website is for users to get in contact with me regarding employment offers. And the the other goal is to show my previous work achievements and progress</p>
+            <p>The main goal of this website is for users to get in contact with me regarding employment offers. And the the other goal is to show my previous work achievements and progress.</p>
         </dd>
     </dl>
    
