--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -2,28 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PWP Milestone 1</title>
+    <title>Simo PWP Milestone 1</title>
 </head>
 
-<body style="background-color: aquamarine;" >
+<body style="background-color: aquamarine; margin: auto; width: 600px" >
     <h1>PWP Milestone 1</h1>
     <h2>Purpose, Audience & Goal</h2>
     
-    <dl>
-        <dt>Purpose</dt>
-        <dd class="center">
-            <p>The website of this project is a personal portfolio of my professional web development experience.</p>
-        </dd>
+    <h3>Purpose</h3>
+    <p>The website of this project is a personal portfolio of my professional web development experience.</p>
 
-        <dt>Audience</dt>
-        <dd class="right">
-            <p>the audience category this website targeting is future employers including: HR managers, recruiters.</p>
-        </dd>
+    <h3>Audience</h3>
+    <p>the audience category this website targeting is future employers including: HR managers, recruiters.</p>
 
-        <dt>Goal</dt>
-        <dd>
-            <p>The main goal of this website is for users to get in contact with me regarding employment offers. And the the other goal is to show my previous work achievements and progress.</p>
-        </dd>
-    </dl>
-   
+    <h3>Goal</h3>
+    <p>The main goal of this website is for users to get in contact with me regarding employment offers. And the the other goal is to show my previous work achievements and progress.</p>
+
 </body>
