started persona section

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -6,16 +6,30 @@
 </head>
 
 <body style="background-color: aquamarine; margin: auto; width: 610px" >
-    <h1>PWP Milestone 1</h1>
-    <h2>Purpose, Audience & Goal</h2>
-    
-    <h3>Purpose</h3>
-    <p>The website of this project is a personal portfolio of my professional web development experience.</p>
+<h1>PWP Milestone 1</h1>
+<h2>Purpose, Audience & Goal</h2>
 
-    <h3>Audience</h3>
-    <p>the audience category this website targeting is future employers including: HR managers, recruiters.</p>
+<h3>Purpose</h3>
+<p style="margin-left: 100px;">The website of this project is a personal portfolio of my professional web development experience.</p>
 
-    <h3>Goal</h3>
-    <p>The main goal of this website is for users to get in contact with me regarding employment offers. And the the other goal is to show my previous work achievements and progress.</p>
+<h3>Audience</h3>
+<p>the audience category this website targeting is future employers including: HR managers, recruiters.</p>
 
+<h3>Goal</h3>
+<p>The main goal of this website is for users to get in contact with me regarding employment offers. And the the other goal is to show my previous work achievements and progress.</p>
+
+<h2>Persona</h2>
+
+<h3>Name</h3>
+<p>Sammy Sosa</p>
+
+<h3>Job Title: CEO construction company</h3>
+<p>Sammy Sosa has been running a humble construction company for 5 years in Fort Lauderdale area. He's been looking to expand projects to the greater South Florida, but he's short on sells staff and feels the need for a website to expand his presence.</p>
+
+<h3>Frustration</h3>
+<p>Sammy has been focused on construction and property management since he started the company but he lacks knowledge in modern web development. He is also a very busy person and doesn't have time to research his market for the web.</p>
+
+<h3>Goal</h3>
+<p></p>
 </body>
+</html>
