--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -30,6 +30,6 @@
 <p>Sammy has been focused on construction and property management since he started the company but he lacks knowledge in modern web development. He is also a very busy person and doesn't have time to research his market for the web.</p>
 
 <h3>Goal</h3>
-<p></p>
+<p>Sammy wants to expand the exposure of his company's services to the greater South Florida region and he believes an online presence built with modern web practices can help him meet that goal. The research that he and his team have done for web services in the area has lead them to the conclusion that Massimo Bouchentouf Web Services LLC is the best in the area</p>
 </body>
 </html>
