--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -31,5 +31,9 @@
 
 <h3>Goal</h3>
 <p>Sammy wants to expand the exposure of his company's services to the greater South Florida region and he believes an online presence built with modern web practices can help him meet that goal. The research that he and his team have done for web services in the area has lead them to the conclusion that Massimo Bouchentouf Web Services LLC is the best in the area.</p>
+
+<h3>User Story</h3>
+<p>As a user, I need to decide if Simo Bouchentouf meets the the requirements needed for my goal.</p>
+
 </body>
 </html>
