added User Story

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -10,7 +10,7 @@
 <h2>Purpose, Audience & Goal</h2>
 
 <h3>Purpose</h3>
-<p style="margin-left: 100px;">The website of this project is a personal portfolio of my professional web development experience.</p>
+<p>The website of this project is a personal portfolio of my professional web development experience.</p>
 
 <h3>Audience</h3>
 <p>the audience category this website targeting is future employers including: HR managers, recruiters.</p>
