--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -5,7 +5,7 @@
     <title>Simo PWP Milestone 1</title>
 </head>
 
-<body style="background-color: aquamarine; margin: auto; width: 610px; font-family: sans-serif" >
+<body style="background-color: #e5e5e5; margin: auto; width: 610px; font-family: sans-serif" >
 <h1>PWP Milestone 1</h1>
 <h2>Purpose, Audience & Goal</h2>
 
