added content strategy

--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -4,7 +4,23 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body style="background-color: #e5e5e5; margin: auto; width: 610px; font-family: sans-serif">
+<h1>PWP Milestone</h1>
+<h2>Content Strategy</h2>
+<p>This single page site will present the following content:</p>
+
+<h3>Welcome</h3>
+    <p>This is the 1st content section of the page where I will introduce myself and my experience and interests as a
+        Front End Web Developer.</p>
+
+<h3>My Story</h3>
+    <p>In this section I ill give a brief overview of my experience in Web Development. I will expand on my history and
+        passion that led me to this field. I will discuss specific key skills and strengths to let potential clients know
+        what I bring to the table and how I can best fit into their projects.</p>
+
+<h3>My Work</h3>
+
+<h3>Contact me</h3>
 
 </body>
 </html>
