added my story, my work and contact me section.

--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -19,8 +19,13 @@
         what I bring to the table and how I can best fit into their projects.</p>
 
 <h3>My Work</h3>
+    <p>In this section I will display an image gallery showcasing several projects I have worked on. For each project I
+    will have a few screenshots and brief description of the projects goals, obstacles and solutions discovered in the
+    process.</p>
 
 <h3>Contact me</h3>
+    <p>In this section I will have a simple contact form that has entry full name, email address and short description,
+        I will also have a list of my Email address, phone number, LinkedIn, and my github.</p>
 
 </body>
 </html>
