added mockup desktop.png, mockup mobile.png

--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>PWP Milestone 2</title>
 </head>
 <body style="background-color: #e5e5e5; margin: auto; width: 610px; font-family: sans-serif">
-<h1>PWP Milestone</h1>
+<h1>PWP Milestone 2</h1>
 <h2>Content Strategy</h2>
 <p>This single page site will present the following content:</p>
 
