I removed inline styling, added desktop and mobile layouts to milestone-2.html

--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>PWP Milestone 2</title>
 </head>
-<body style="background-color: #e5e5e5; margin: auto; width: 610px; font-family: sans-serif">
+<body>
 <h1>PWP Milestone 2</h1>
 <h2>Content Strategy</h2>
 <p>This single page site will present the following content:</p>
@@ -27,5 +27,13 @@
     <p>In this section I will have a simple contact form that has entry full name, email address and short description,
         I will also have a list of my Email address, phone number, LinkedIn, and my github.</p>
 
+<h2>Wireframes</h2>
+<p>My website will be a layout that will be fully responsive for desktop and mobile screens.</p>
+
+<h3>Desktop Layout</h3>
+<img src="desktopwrfrm.png" alt="desktop layout">
+
+<h3>Mobile Layout</h3>
+<img src="mobilewrfrm.png" alt="mobile layout">
 </body>
 </html>
