added jumbotron, introduction, My Story,  My Work sections

--- a/public_html/documentation/Milestone-3.html
+++ b/public_html/documentation/Milestone-3.html
@@ -8,8 +8,8 @@
     <title>Milestone</title>
 </head>
 <body>
-<div class="container px-0 px-md-0">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border border-secondary rounded p-0 my-md-4">
+<nav class="navbar navbar-expand-lg navbar-light bg-light border border-secondary rounded p-0 my-md-4">
+    <div class="container px-0 px-md-0">
         <a class="navbar-brand" href="#"><b>Home</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarAltMarkup"
                 aria-controls="navbarAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,27 +22,86 @@
                 <a class="nav-link" href="#"><b>My Work</b></a>
                 <a class="nav-link" href="#"><b>Contact Me</b></a>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </div>
 </div>
-<div class="bg py-5">
-    <section class="container">
+
+<section class="jumbotron d-flex justify-content-center bg-light py-5">
+    <div class="container">
         <div class="row">
-            <div class="col-md-9 pl-md-5 py-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum..</p>
+            <div class="col py-3 mx-auto">
+                <h1>Azul Flawen!</h1>
+                <p> This means "Peace be upon you" in my native language. I'm Massimo Bouchentouf,
+                    originally from Southern Morocco and I love to build things on the web. As a Fullstack Developer
+                    I enjoy problem solving on the server and client side.</p>
+            </div>
+            <div class="text-center col-md-6 offset-md-6">
+                <h2>Massimo Bouchentouf </h2>
+                <p>Web Developer</p>
             </div>
         </div>
-    </section>
-</div>
+    </div>
+</section>
+
+<section class="my-md-5">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2>My Story</h2>
+                <p>I initially started my Web development training in years 10 years ago, but I had the fortunate luck
+                being granted the Immigrant Visa to come to the US. So after gaining work experience in different fields
+                I decided to return to my initial interest.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<<div class="container">
+    <div class="row py-3">
+                <h2>My Work</h2>
+                <div class="col-md ml-md-0 mx-5 py-5">
+                    <img class="img-fluid rounded-circle d-block mb-4 mx-auto" src="html.png" height="130" alt="bird">
+                    <div class="border border-secondary bg-light">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                            et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="col-md ml-md-0 mx-5 py-5">
+                    <img class="img-fluid rounded-circle d-block mb-4 mx-auto" src="css.png" height="300" width="300" alt="bird">
+                    <div class="border border-secondary bg-light">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                            et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="col-md ml-md-0 mx-5 py-5">
+                    <img class="img-fluid rounded-circle d-block mb-4 mx-auto" src="icon-botsrap-1.png" height="300" width="300" alt="bird">
+                    <div class="border border-secondary bg-light">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                            et dolore magna aliquar</p>
+                    </div>
+                </div>
+                <div class="col-md ml-md-0 mx-5 py-5">
+                    <img class="img-fluid rounded-circle d-block mb-4 mx-auto" src="jsnode.png" height="300" width="300" alt="bird">
+                    <div class="border border-secondary bg-light">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                            et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="col-md ml-md-0 mx-5 py-5">
+                    <img class=" rounded-circle d-block mb-4 mx-auto" src="react.png" height="300" width="300" alt="bird">
+                    <div class="border border-secondary bg-light">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                            et dolore magna aliqua</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
 
 
 
