--- a/public_html/documentation/Milestone-3.html
+++ b/public_html/documentation/Milestone-3.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,9 +22,9 @@
                 <a class="nav-link" href="#"><b>My Work</b></a>
                 <a class="nav-link" href="#"><b>Contact Me</b></a>
             </div>
-        </nav>
+        </div>
     </div>
-</div>
+</nav>
 
 <section class="jumbotron d-flex justify-content-center bg-light py-5">
     <div class="container">
@@ -56,48 +56,92 @@
     </div>
 </section>
 
-<<div class="container">
-    <div class="row py-3">
-                <h2>My Work</h2>
-                <div class="col-md ml-md-0 mx-5 py-5">
-                    <img class="img-fluid rounded-circle d-block mb-4 mx-auto" src="html.png" height="130" alt="bird">
-                    <div class="border border-secondary bg-light">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="col-md ml-md-0 mx-5 py-5">
-                    <img class="img-fluid rounded-circle d-block mb-4 mx-auto" src="css.png" height="300" width="300" alt="bird">
-                    <div class="border border-secondary bg-light">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="col-md ml-md-0 mx-5 py-5">
-                    <img class="img-fluid rounded-circle d-block mb-4 mx-auto" src="icon-botsrap-1.png" height="300" width="300" alt="bird">
-                    <div class="border border-secondary bg-light">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliquar</p>
-                    </div>
-                </div>
-                <div class="col-md ml-md-0 mx-5 py-5">
-                    <img class="img-fluid rounded-circle d-block mb-4 mx-auto" src="jsnode.png" height="300" width="300" alt="bird">
-                    <div class="border border-secondary bg-light">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="col-md ml-md-0 mx-5 py-5">
-                    <img class=" rounded-circle d-block mb-4 mx-auto" src="react.png" height="300" width="300" alt="bird">
-                    <div class="border border-secondary bg-light">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua</p>
-                    </div>
-                </div>
+<div class="container py-3">
+    <div class="row">
+        <div class="col"><h2>My Work</h2></div>
+    </div>
+    <div class="row justify-content-between">
+        <div class="col-md-2 card border-0">
+            <img src="html.png" class="card-img-top img-fluid" alt="html" height="300" width="300">
+            <div class="card-body text-center">
+                <h5 class="card-title">HTML5</h5>
+                <p class="card-text">
+                    HTML is the 1st coding language I've learned, and
+                </p>
+            </div>
+        </div>
+        <div class="col-md-2 card border-0">
+            <img src="css.png" class="card-img-top img-fluid" alt="css" height="300" width="300">
+            <div class="card-body">
+                <h5 class="card-title">CSS</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+        <div class="col-md-2 card border-0">
+            <img src="icon-botsrap-1.png" class="card-img-top img-fluid" alt="html" height="300" width="300">
+            <div class="card-body">
+                <h5 class="card-title">Bootstrap 5</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+        <div class="col-md-2 card border-0">
+            <img src="jsnode2.png" class="card-img-top img-fluid" alt="js node" height="300" width="300">
+            <div class="card-body">
+                <h5 class="card-title">Node JS</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+        <div class="col-md-2 card border-0">
+            <img src="jsreact.png" class="rounded-circle card-img-top img-fluid" alt="html" height="300" width="300">
+            <div class="card-body">
+                <h5 class="card-title">Reacy Js</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
     </div>
-</section>
+</div>
+
+<div class="bg-light">
+    <div class="container">
+        <form id="contact-form" method="post"  role="form">
+            <div class="controls">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="form_name">Name *</label>
+                            <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your full name *" required="required" data-error="Firstname is required.">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="form_email">Email *</label>
+                        <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="form_message">Message *</label>
+                        <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please,leave us a message."></textarea>
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <input type="submit" class="btn btn-dark btn-send" value="Send message">
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+
+
+
+
 
 
 
