--- a/public_html/documentation/Milestone-3.html
+++ b/public_html/documentation/Milestone-3.html
@@ -94,7 +94,7 @@
         <div class="col-md-2 card border-0">
             <img src="jsreact.png" class="rounded-circle card-img-top img-fluid" alt="html" height="300" width="300">
             <div class="card-body">
-                <h5 class="card-title">Reacy Js</h5>
+                <h5 class="card-title">React Js</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
