adjusted contact me form, and added text to the cards

--- a/public_html/documentation/milestone-3.html
+++ b/public_html/documentation/milestone-3.html
@@ -43,20 +43,28 @@
     </div>
 </section>
 
-<section class="my-md-5">
+<section class="my-md-5 bg-secondary">
     <div class="container">
         <div class="row">
             <div class="col">
                 <h2>My Story</h2>
                 <p>I initially started my Web development training in years 10 years ago, but I had the fortunate luck
                 being granted the Immigrant Visa to come to the US. So after gaining work experience in different fields
-                I decided to return to my initial interest.</p>
+                I decided to return to my initial interest. My 1st 6 months in the US I worked as a construction worker,
+                painting, demolition, windows ... that's when my friend offered me a job working for Sammy Sosa as a
+                warehouse worker. During that period I obtained my forklift operation certificate, which lead me to be
+                the warehouse supervisor and the operator of the steel machine that manufactures bundles of steel we used
+                to ship to South America so the rest of the crew put these pieces together to build Anti-Disaster houses
+                for low income families. After that I decided to join the restaurant field, I worked as a busboy, then
+                as a cook, sous chef back in South Florida, and I ended up as kitchen supervisor in Sunport Airport when
+                I moved to Albuquerque in 2017. After that I applied to Baillos and I worked there as a delivery driver
+                and as an appliances installer; fridges, dishwashers, dryers, Tvs ...</p>
             </div>
         </div>
     </div>
 </section>
 
-<div class="container py-3">
+<div class="container py-3 bg-light">
     <div class="row">
         <div class="col"><h2>My Work</h2></div>
     </div>
@@ -66,7 +74,10 @@
             <div class="card-body text-center">
                 <h5 class="card-title">HTML5</h5>
                 <p class="card-text">
-                    HTML is the 1st coding language I've learned, and
+                    HTML is the 1st coding language I've learned, HTML, in full hypertext markup language, a formatting
+                    system for displaying material retrieved over the Internet. Each retrieval unit is known as a Web
+                    page (from World Wide Web), and such pages frequently contain hypertext links that allow related
+                    pages to be retrieved.
                 </p>
             </div>
         </div>
@@ -74,14 +85,20 @@
             <img src="css.png" class="card-img-top img-fluid" alt="css" height="300" width="300">
             <div class="card-body">
                 <h5 class="card-title">CSS</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">CSS is the 2nd language I learn to use and it is acronym of “Cascading Style Sheets
+                    ”. CSS is a computer language for laying out and structuring web pages (HTML or XML). This language
+                    contains coding elements and is composed of these “cascading style sheets” which are equally called
+                    CSS files.</p>
             </div>
         </div>
         <div class="col-md-2 card border-0">
-            <img src="icon-botsrap-1.png" class="card-img-top img-fluid" alt="html" height="300" width="300">
+            <img src="icon-botsrap-1.png" class="card-img-top img-fluid" alt="bootstrap" height="300" width="300">
             <div class="card-body">
                 <h5 class="card-title">Bootstrap 5</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Bootstrap is the 3rd coding language I've learned to use and it is a free and open
+                    source front end development framework for the creation of websites and web apps. Its framework is
+                    built on HTML, CSS, and JavaScript (JS) to facilitate the development of responsive, mobile-first
+                    sites and apps</p>
             </div>
         </div>
         <div class="col-md-2 card border-0">
@@ -92,7 +109,7 @@
             </div>
         </div>
         <div class="col-md-2 card border-0">
-            <img src="jsreact.png" class="rounded-circle card-img-top img-fluid" alt="html" height="300" width="300">
+            <img src="jsreact.png" class="rounded-circle card-img-top img-fluid" alt="JS React" height="300" width="300">
             <div class="card-body">
                 <h5 class="card-title">React Js</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -101,12 +118,12 @@
     </div>
 </div>
 
-<div class="bg-light">
+<div class="bg-secondary">
     <div class="container">
         <form id="contact-form" method="post"  role="form">
             <div class="controls">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-3">
                         <div class="form-group">
                             <label for="form_name">Name *</label>
                             <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your full name *" required="required" data-error="Firstname is required.">
@@ -115,7 +132,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-3">
                     <div class="form-group">
                         <label for="form_email">Email *</label>
                         <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
@@ -123,7 +140,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-3">
                     <div class="form-group">
                         <label for="form_message">Message *</label>
                         <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please,leave us a message."></textarea>
