added text to my work section

--- a/public_html/documentation/milestone-3.html
+++ b/public_html/documentation/milestone-3.html
@@ -105,14 +105,19 @@
             <img src="jsnode2.png" class="card-img-top img-fluid" alt="js node" height="300" width="300">
             <div class="card-body">
                 <h5 class="card-title">Node JS</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Node. js (Node) is the open source development platform for executing JavaScript
+                    code server-side. I learned and because it is useful for developing applications that require a
+                    persistent connection from the browser to the server and is often used for real-time applications
+                    such as chat, news feeds and web push notifications.</p>
             </div>
         </div>
         <div class="col-md-2 card border-0">
             <img src="jsreact.png" class="rounded-circle card-img-top img-fluid" alt="JS React" height="300" width="300">
             <div class="card-body">
                 <h5 class="card-title">React Js</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">React. js is an open-source JavaScript library that I learned for building user
+                    interfaces specifically for single-page applications. For me it is useful for handling the view
+                    layer for web and mobile apps. React also allows us to create reusable UI components.</p>
             </div>
         </div>
     </div>
