added javascrips for contact me

--- a/public_html/documentation/milestone-3.html
+++ b/public_html/documentation/milestone-3.html
@@ -117,7 +117,7 @@
                 <h5 class="card-title">React Js</h5>
                 <p class="card-text">React. js is an open-source JavaScript library that I learned for building user
                     interfaces specifically for single-page applications. For me it is useful for handling the view
-                    layer for web and mobile apps. React also allows us to create reusable UI components.</p>
+                    layer for web and mobile apps. React also allows us to create reusable UI components..</p>
             </div>
         </div>
     </div>
@@ -125,6 +125,9 @@
 
 <div class="bg-secondary">
     <div class="container">
+        <div class="col"><p>React. js is an open-source JavaScript library that I learned for building user
+            interfaces specifically for single-page applications. For me it is useful for handling the view
+            layer for web and mobile apps. React also allows us to create reusable UI components</p></div>
         <form id="contact-form" method="post"  role="form">
             <div class="controls">
                 <div class="row">
@@ -159,6 +162,8 @@
         </form>
     </div>
 </div>
+
+
 
 
 
