--- a/public_html/documentation/milestone-3.html
+++ b/public_html/documentation/milestone-3.html
@@ -70,7 +70,7 @@
     </div>
     <div class="row justify-content-between">
         <div class="col-md-2 card border-0">
-            <img src="html.png" class="card-img-top img-fluid" alt="html" height="300" width="300">
+            <img src="html.png" class="rounded-circle card-img-top img-fluid" alt="html" height="300" width="300">
             <div class="card-body text-center">
                 <h5 class="card-title">HTML5</h5>
                 <p class="card-text">
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div class="col-md-2 card border-0">
-            <img src="css.png" class="card-img-top img-fluid" alt="css" height="300" width="300">
+            <img src="css.png" class="rounded-circle card-img-top img-fluid" alt="css" height="300" width="300">
             <div class="card-body">
                 <h5 class="card-title">CSS</h5>
                 <p class="card-text">CSS is the 2nd language I learn to use and it is acronym of “Cascading Style Sheets
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="col-md-2 card border-0">
-            <img src="icon-botsrap-1.png" class="card-img-top img-fluid" alt="bootstrap" height="300" width="300">
+            <img src="icon-botsrap-1.png" class="rounded-circle card-img-top img-fluid" alt="bootstrap" height="300" width="300">
             <div class="card-body">
                 <h5 class="card-title">Bootstrap 5</h5>
                 <p class="card-text">Bootstrap is the 3rd coding language I've learned to use and it is a free and open
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div class="col-md-2 card border-0">
-            <img src="jsnode2.png" class="card-img-top img-fluid" alt="js node" height="300" width="300">
+            <img src="jsnode2.png" class="rounded-circle card-img-top img-fluid" alt="js node" height="300" width="300">
             <div class="card-body">
                 <h5 class="card-title">Node JS</h5>
                 <p class="card-text">Node. js (Node) is the open source development platform for executing JavaScript
@@ -175,10 +175,11 @@
 
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy3
-8MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMG
-pqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
+</body>
+</html>
 
 </body>
 </html>
