added text-center class to cards

--- a/public_html/documentation/milestone-3.html
+++ b/public_html/documentation/milestone-3.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
+    <script src="contact.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -83,7 +84,7 @@
         </div>
         <div class="col-md-2 card border-0">
             <img src="css.png" class="rounded-circle card-img-top img-fluid" alt="css" height="300" width="300">
-            <div class="card-body">
+            <div class="card-body text-center">
                 <h5 class="card-title">CSS</h5>
                 <p class="card-text">CSS is the 2nd language I learn to use and it is acronym of “Cascading Style Sheets
                     ”. CSS is a computer language for laying out and structuring web pages (HTML or XML). This language
@@ -93,7 +94,7 @@
         </div>
         <div class="col-md-2 card border-0">
             <img src="icon-botsrap-1.png" class="rounded-circle card-img-top img-fluid" alt="bootstrap" height="300" width="300">
-            <div class="card-body">
+            <div class="card-body text-center">
                 <h5 class="card-title">Bootstrap 5</h5>
                 <p class="card-text">Bootstrap is the 3rd coding language I've learned to use and it is a free and open
                     source front end development framework for the creation of websites and web apps. Its framework is
@@ -103,7 +104,7 @@
         </div>
         <div class="col-md-2 card border-0">
             <img src="jsnode2.png" class="rounded-circle card-img-top img-fluid" alt="js node" height="300" width="300">
-            <div class="card-body">
+            <div class="card-body text-center">
                 <h5 class="card-title">Node JS</h5>
                 <p class="card-text">Node. js (Node) is the open source development platform for executing JavaScript
                     code server-side. I learned and because it is useful for developing applications that require a
@@ -113,7 +114,7 @@
         </div>
         <div class="col-md-2 card border-0">
             <img src="jsreact.png" class="rounded-circle card-img-top img-fluid" alt="JS React" height="300" width="300">
-            <div class="card-body">
+            <div class="card-body text-center">
                 <h5 class="card-title">React Js</h5>
                 <p class="card-text">React. js is an open-source JavaScript library that I learned for building user
                     interfaces specifically for single-page applications. For me it is useful for handling the view
