--- a/public_html/documentation/milestone-3.html
+++ b/public_html/documentation/milestone-3.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <script src="contact.js"></script>
