--- a/public_html/documentation/milestone-3.html
+++ b/public_html/documentation/milestone-3.html
@@ -131,7 +131,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="form-group">
-                            <label for="form_name">Name *</label>
+                            <label for="form_name"><b>Name *</b></label>
                             <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your full name *" required="required" data-error="Firstname is required.">
                         </div>
                     </div>
@@ -140,7 +140,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="form-group">
-                        <label for="form_email">Email *</label>
+                        <label for="form_email"><b>Email *</b></label>
                         <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
                     </div>
                 </div>
@@ -148,7 +148,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="form-group">
-                        <label for="form_message">Message *</label>
+                        <label for="form_message"><b>Message *</b></label>
                         <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please,leave us a message."></textarea>
                         <div class="help-block with-errors"></div>
                     </div>
